Adds link stylings

--- a/docs/src/_layout/_docs-layout.pug
+++ b/docs/src/_layout/_docs-layout.pug
@@ -4,7 +4,7 @@ include _mixins.pug
 block content
   .docs-container.off-canvas.off-canvas-sidebar-show
     .docs-navbar
-      a.off-canvas-toggle.btn.btn-link.btn-action(href='#sidebar')
+      a.off-canvas-toggle.link.link-primary.btn-action(href='#sidebar')
         i.icon.icon-bars
       .btns.d-flex
         a.btn.btn-primary.ml-1(href='https://github.com/Burkson/ridestyler.ui' target='_blank') GitHub
@@ -35,6 +35,7 @@ block content
             'elements',
             'Elements',
             {url: 'typography', name: 'Typography'},
+            {url: 'links', name: 'Links'},
             {url: 'headers', name: 'Headers'},
             {url: 'tables', name: 'Tables'},
             {url: 'buttons', name: 'Buttons'},
