--- a/docs/src/components/breadcrumbs.pug
+++ b/docs/src/components/breadcrumbs.pug
@@ -20,7 +20,7 @@ block docs-content
           section.navbar-section
             h1 Augmented Reality
           section.navbar-section
-            button.btn.btn-link
+            button.link
               | Wheel Co. 
               i.icon.icon-caret-down
         header
