--- a/docs/src/components/cards.pug
+++ b/docs/src/components/cards.pug
@@ -22,7 +22,7 @@ block docs-content
           .card-body
             | Empower every person and every organization on the planet to achieve more.
           .card-footer.text-right
-            a.btn.btn-link(href="#cards")
+            a.link.link-primary(href="#cards")
               | Read 
               i.icon.icon-arrow-right
       .column.col-4.col-xs-12.mb-4
@@ -56,7 +56,7 @@ block docs-content
             img.img-responsive(src="../img/osx-el-capitan-2.jpg" alt="OS X El Capitan")
           .card-footer
             a.btn.btn-primary(href="#cards") Buy
-            a.btn.btn-link(href="#cards") Share
+            a.link.link-primary(href="#cards") Share
           .card-body
             strong Surface Studio
             | . Turn your desk into a Studio. Surface Studio is designed for the creative process.
@@ -80,7 +80,7 @@ block docs-content
             img.img-responsive(src="../img/osx-yosemite-2.jpg" alt="OS X Yosemite")
           .card-footer
             a.btn.btn-primary(href="#cards") Search
-            a.btn.btn-link(href="#cards") Share
+            a.link.link-primary(href="#cards") Share
 
     p
       | Add a container element with the #[code card] class.
