--- a/docs/src/components/empty.pug
+++ b/docs/src/components/empty.pug
@@ -30,7 +30,7 @@ block docs-content
           .empty-action
             button.btn.btn-primary Invite your friends
           .empty-action
-            button.btn.btn-link Skip
+            button.link.link-primary Skip
       .column.col-12
         .empty
           .empty-icon
