--- a/docs/src/components/menu.pug
+++ b/docs/src/components/menu.pug
@@ -138,7 +138,7 @@ block docs-content
                   | Skype
       .column.col-xs-12
         .dropdown
-          a.btn.btn-link.dropdown-toggle(tabindex="0")
+          a.link.link-primary.dropdown-toggle(tabindex="0")
             | dropdown button 
             i.icon.icon-caret-down
           ul.menu
@@ -183,7 +183,7 @@ block docs-content
         :highlight(lang="html")
           <!-- basic dropdown button -->
           <div class="dropdown">
-            <a href="#" class="btn btn-link dropdown-toggle" tabindex="0">
+            <a href="#" class="link link-primary dropdown-toggle" tabindex="0">
               dropdown menu <i class="icon icon-caret-down"></i>
             </a>
             <!-- menu component -->
