--- a/docs/src/components/modals.pug
+++ b/docs/src/components/modals.pug
@@ -40,7 +40,7 @@ block docs-content
                   | Caerphilly swiss fromage frais. Brie cheese and wine fromage frais chalk and cheese danish fontina smelly cheese who moved my cheese cow.
             .modal-footer
               button.btn.btn-primary Share
-              a.btn.btn-link(href="#modals") Close
+              a.link.link-primary(href="#modals") Close
 
     p
       | Add a container element with the #[code modal] class.
@@ -100,7 +100,7 @@ block docs-content
                       |  Female
             .modal-footer
               button.btn.btn-primary Submit
-              a.btn.btn-link(href="#modals-sizes" aria-label="Close") Close
+              a.link.link-primary(href="#modals-sizes" aria-label="Close") Close
 
     p
       | Use the #[code modal-sm] class for a smaller modal dialog.
@@ -135,7 +135,7 @@ block docs-content
                   | Caerphilly swiss fromage frais. Brie cheese and wine fromage frais chalk and cheese danish fontina smelly cheese who moved my cheese cow.
             .modal-footer
               button.btn.btn-primary Share
-              a.btn.btn-link(href="#modals-sizes") Close
+              a.link.link-primary(href="#modals-sizes") Close
 
     p
       | Use the #[code modal-lg] class for a full size modal.
