--- a/docs/src/components/panels.pug
+++ b/docs/src/components/panels.pug
@@ -36,21 +36,21 @@ block docs-content
                 .tile-title.text-bold E-mail
                 .tile-subtitle bruce.banner@hulk.com
               .tile-action
-                button.btn.btn-link.btn-action.btn-lg.tooltip.tooltip-left(data-tooltip="Edit E-mail")
+                button.link.link-primary.btn-action.btn-lg.tooltip.tooltip-left(data-tooltip="Edit E-mail")
                   i.icon.icon-edit
             .tile.tile-centered
               .tile-content
                 .tile-title.text-bold Skype
                 .tile-subtitle bruce.banner
               .tile-action
-                button.btn.btn-link.btn-action.btn-lg
+                button.link.link-primary.btn-action.btn-lg
                   i.icon.icon-edit
             .tile.tile-centered
               .tile-content
                 .tile-title.text-bold Location
                 .tile-subtitle Dayton, Ohio
               .tile-action
-                button.btn.btn-link.btn-action.btn-lg
+                button.link.link-primary.btn-action.btn-lg
                   i.icon.icon-edit
           .panel-footer
             button.btn.btn-primary.btn-block Save
