--- a/docs/src/components/tiles.pug
+++ b/docs/src/components/tiles.pug
@@ -74,13 +74,13 @@ block docs-content
         .tile.tile-centered
           .tile-icon
             .example-tile-icon
-              i.icon.icon-mail.centered
+              i.icon.icon-file-pdf.centered
           .tile-content
             .tile-title ridestyler.ui-docs.pdf
             small.tile-subtitle.text-gray 14MB · Public · 1 Jan, 2017
           .tile-action
-            button.btn.btn-link.btn-action
-              i.icon.icon-more-vert
+            button.link.link-primary.btn-action
+              i.icon.icon-ellipsis-v
 
     pre.code(data-lang='HTML')
       code
@@ -96,8 +96,8 @@ block docs-content
               <small class="tile-subtitle text-gray">14MB · Public · 1 Jan, 2017</small>
             </div>
             <div class="tile-action">
-              <button class="btn btn-link">
-                <i class="icon icon-more-vert"></i>
+              <button class="link link-primary">
+                <i class="icon icon-ellipsis-v"></i>
               </button>
             </div>
           </div>
