--- a/docs/src/elements/buttons.pug
+++ b/docs/src/elements/buttons.pug
@@ -16,18 +16,16 @@ block docs-content
         button.btn default button
         button.btn.btn-primary primary button
         button.btn.btn-secondary secondary button
-        button.btn.btn-link link button
 
     p
       | Add the #[code btn] class to #{'<a>'}, #{'<input>'} or #{'<button>'} elements for a default button. 
-      | There are classes #[code btn-primary], #[code btn-secondary] #[code btn-link] for predefined primary, secondary and link buttons.
+      | There are classes #[code btn-primary] and #[code btn-secondary] for predefined primary and secondary buttons.
 
     pre.code(data-lang='HTML')
       code
         :highlight(lang="html")
           <button class="btn">default button</button>
           <button class="btn btn-primary">primary button</button>
-          <button class="btn btn-link">link button</button>
 
     +docs-subheading('buttons-shapes', 'Button shapes')
 
@@ -142,7 +140,6 @@ block docs-content
       .column.col-12
         button.btn.disabled(tabindex="-1") default disabled
         button.btn.btn-primary(disabled="" tabindex="-1") primary disabled
-        button.btn.btn-link(disabled="" tabindex="-1") link disabled
 
     pre.code(data-lang='HTML')
       code
@@ -159,7 +156,6 @@ block docs-content
         button.btn.loading default button
         button.btn.btn-primary.loading primary button
         button.btn.btn-secondary.loading primary button
-        button.btn.btn-link.loading link button
 
     pre.code(data-lang='HTML')
       code
