--- a/docs/src/examples/starter.pug
+++ b/docs/src/examples/starter.pug
@@ -14,7 +14,7 @@ block example-content
     section.navbar-section
       h1 RideStyler UI
     section.navbar-section
-      button.btn.btn-link
+      button.link.link-primary
         | Wheel Co. 
         i.icon.icon-caret-down
   header Starter Page Example
