--- a/docs/src/utilities/divider.pug
+++ b/docs/src/utilities/divider.pug
@@ -45,7 +45,7 @@ block docs-content
             input#input-example-3.form-input(type="text" placeholder="Email")
           .form-group
             button.btn.btn-primary.btn-block Sign up
-            button.btn.btn-link.btn-block Learn more
+            button.link.link-primary.btn-block Learn more
 
     pre.code(data-lang='HTML')
       code
