--- a/docs/components/cards.html
+++ b/docs/components/cards.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="docs-container off-canvas off-canvas-sidebar-show">
-      <div class="docs-navbar"><a class="off-canvas-toggle btn btn-link btn-action" href="#sidebar"><i class="icon icon-bars"></i></a>
+      <div class="docs-navbar"><a class="off-canvas-toggle link link-primary btn-action" href="#sidebar"><i class="icon icon-bars"></i></a>
         <div class="btns d-flex"><a class="btn btn-primary ml-1" href="https://github.com/Burkson/ridestyler.ui" target="_blank">GitHub</a></div>
       </div>
       <div class="docs-sidebar off-canvas-sidebar" id="sidebar">
@@ -51,6 +51,8 @@
               <div class="accordion-body">
                 <ul class="menu menu-nav">
                   <li class="menu-item"><a href="../elements/typography.html">Typography</a>
+                  </li>
+                  <li class="menu-item"><a href="../elements/links.html">Links</a>
                   </li>
                   <li class="menu-item"><a href="../elements/headers.html">Headers</a>
                   </li>
@@ -176,7 +178,7 @@
                     <div class="card-subtitle text-gray">Software and hardware</div>
                   </div>
                   <div class="card-body">Empower every person and every organization on the planet to achieve more.</div>
-                  <div class="card-footer text-right"><a class="btn btn-link" href="#cards">Read <i class="icon icon-arrow-right"></i></a></div>
+                  <div class="card-footer text-right"><a class="link link-primary" href="#cards">Read <i class="icon icon-arrow-right"></i></a></div>
                 </div>
               </div>
               <div class="column col-4 col-xs-12 mb-4">
@@ -210,7 +212,7 @@
               <div class="column col-4 col-xs-12 mb-4">
                 <div class="card">
                   <div class="card-image"><img class="img-responsive" src="../img/osx-el-capitan-2.jpg" alt="OS X El Capitan"></div>
-                  <div class="card-footer"><a class="btn btn-primary" href="#cards">Buy</a><a class="btn btn-link" href="#cards">Share</a></div>
+                  <div class="card-footer"><a class="btn btn-primary" href="#cards">Buy</a><a class="link link-primary" href="#cards">Share</a></div>
                   <div class="card-body"><strong>Surface Studio</strong>. Turn your desk into a Studio. Surface Studio is designed for the creative process.</div>
                 </div>
               </div>
@@ -232,7 +234,7 @@
                   </div>
                   <div class="card-body">Organize the world’s information and make it universally accessible and useful.</div>
                   <div class="card-image"><img class="img-responsive" src="../img/osx-yosemite-2.jpg" alt="OS X Yosemite"></div>
-                  <div class="card-footer"><a class="btn btn-primary" href="#cards">Search</a><a class="btn btn-link" href="#cards">Share</a></div>
+                  <div class="card-footer"><a class="btn btn-primary" href="#cards">Search</a><a class="link link-primary" href="#cards">Share</a></div>
                 </div>
               </div>
             </div>
