--- a/docs/components/menu.html
+++ b/docs/components/menu.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="docs-container off-canvas off-canvas-sidebar-show">
-      <div class="docs-navbar"><a class="off-canvas-toggle btn btn-link btn-action" href="#sidebar"><i class="icon icon-bars"></i></a>
+      <div class="docs-navbar"><a class="off-canvas-toggle link link-primary btn-action" href="#sidebar"><i class="icon icon-bars"></i></a>
         <div class="btns d-flex"><a class="btn btn-primary ml-1" href="https://github.com/Burkson/ridestyler.ui" target="_blank">GitHub</a></div>
       </div>
       <div class="docs-sidebar off-canvas-sidebar" id="sidebar">
@@ -51,6 +51,8 @@
               <div class="accordion-body">
                 <ul class="menu menu-nav">
                   <li class="menu-item"><a href="../elements/typography.html">Typography</a>
+                  </li>
+                  <li class="menu-item"><a href="../elements/links.html">Links</a>
                   </li>
                   <li class="menu-item"><a href="../elements/headers.html">Headers</a>
                   </li>
@@ -281,7 +283,7 @@
                 </div>
               </div>
               <div class="column col-xs-12">
-                <div class="dropdown"><a class="btn btn-link dropdown-toggle" tabindex="0">dropdown button <i class="icon icon-caret-down"></i></a>
+                <div class="dropdown"><a class="link link-primary dropdown-toggle" tabindex="0">dropdown button <i class="icon icon-caret-down"></i></a>
                   <ul class="menu">
                     <li class="menu-item"><a href="#dropdowns">Slack</a></li>
                     <li class="menu-item"><a href="#dropdowns">Hipchat</a></li>
@@ -310,7 +312,7 @@
             <p>Also, you can implement your JS to interact with the dropdown menus by adding the <code>active</code> class to the <code>dropdown</code> container.</p>
             <pre class="code" data-lang="HTML"><code><span class="hljs-comment">&lt;!-- basic dropdown button --&gt;</span>
 <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"dropdown"</span>&gt;</span>
-  <span class="hljs-tag">&lt;<span class="hljs-name">a</span> <span class="hljs-attr">href</span>=<span class="hljs-string">"#"</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"btn btn-link dropdown-toggle"</span> <span class="hljs-attr">tabindex</span>=<span class="hljs-string">"0"</span>&gt;</span>
+  <span class="hljs-tag">&lt;<span class="hljs-name">a</span> <span class="hljs-attr">href</span>=<span class="hljs-string">"#"</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"link link-primary dropdown-toggle"</span> <span class="hljs-attr">tabindex</span>=<span class="hljs-string">"0"</span>&gt;</span>
     dropdown menu <span class="hljs-tag">&lt;<span class="hljs-name">i</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"icon icon-caret-down"</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">i</span>&gt;</span>
   <span class="hljs-tag">&lt;/<span class="hljs-name">a</span>&gt;</span>
   <span class="hljs-comment">&lt;!-- menu component --&gt;</span>
