--- a/docs/components/modals.html
+++ b/docs/components/modals.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="docs-container off-canvas off-canvas-sidebar-show">
-      <div class="docs-navbar"><a class="off-canvas-toggle btn btn-link btn-action" href="#sidebar"><i class="icon icon-bars"></i></a>
+      <div class="docs-navbar"><a class="off-canvas-toggle link link-primary btn-action" href="#sidebar"><i class="icon icon-bars"></i></a>
         <div class="btns d-flex"><a class="btn btn-primary ml-1" href="https://github.com/Burkson/ridestyler.ui" target="_blank">GitHub</a></div>
       </div>
       <div class="docs-sidebar off-canvas-sidebar" id="sidebar">
@@ -51,6 +51,8 @@
               <div class="accordion-body">
                 <ul class="menu menu-nav">
                   <li class="menu-item"><a href="../elements/typography.html">Typography</a>
+                  </li>
+                  <li class="menu-item"><a href="../elements/links.html">Links</a>
                   </li>
                   <li class="menu-item"><a href="../elements/headers.html">Headers</a>
                   </li>
@@ -189,7 +191,7 @@
                       </div>
                     </div>
                     <div class="modal-footer">
-                      <button class="btn btn-primary">Share</button><a class="btn btn-link" href="#modals">Close</a>
+                      <button class="btn btn-primary">Share</button><a class="link link-primary" href="#modals">Close</a>
                     </div>
                   </div>
                 </div>
@@ -249,7 +251,7 @@
                       </div>
                     </div>
                     <div class="modal-footer">
-                      <button class="btn btn-primary">Submit</button><a class="btn btn-link" href="#modals-sizes" aria-label="Close">Close</a>
+                      <button class="btn btn-primary">Submit</button><a class="link link-primary" href="#modals-sizes" aria-label="Close">Close</a>
                     </div>
                   </div>
                 </div>
@@ -280,7 +282,7 @@
                       </div>
                     </div>
                     <div class="modal-footer">
-                      <button class="btn btn-primary">Share</button><a class="btn btn-link" href="#modals-sizes">Close</a>
+                      <button class="btn btn-primary">Share</button><a class="link link-primary" href="#modals-sizes">Close</a>
                     </div>
                   </div>
                 </div>
