--- a/docs/components/panels.html
+++ b/docs/components/panels.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="docs-container off-canvas off-canvas-sidebar-show">
-      <div class="docs-navbar"><a class="off-canvas-toggle btn btn-link btn-action" href="#sidebar"><i class="icon icon-bars"></i></a>
+      <div class="docs-navbar"><a class="off-canvas-toggle link link-primary btn-action" href="#sidebar"><i class="icon icon-bars"></i></a>
         <div class="btns d-flex"><a class="btn btn-primary ml-1" href="https://github.com/Burkson/ridestyler.ui" target="_blank">GitHub</a></div>
       </div>
       <div class="docs-sidebar off-canvas-sidebar" id="sidebar">
@@ -51,6 +51,8 @@
               <div class="accordion-body">
                 <ul class="menu menu-nav">
                   <li class="menu-item"><a href="../elements/typography.html">Typography</a>
+                  </li>
+                  <li class="menu-item"><a href="../elements/links.html">Links</a>
                   </li>
                   <li class="menu-item"><a href="../elements/headers.html">Headers</a>
                   </li>
@@ -189,7 +191,7 @@
                         <div class="tile-subtitle">bruce.banner@hulk.com</div>
                       </div>
                       <div class="tile-action">
-                        <button class="btn btn-link btn-action btn-lg tooltip tooltip-left" data-tooltip="Edit E-mail"><i class="icon icon-edit"></i></button>
+                        <button class="link link-primary btn-action btn-lg tooltip tooltip-left" data-tooltip="Edit E-mail"><i class="icon icon-edit"></i></button>
                       </div>
                     </div>
                     <div class="tile tile-centered">
@@ -198,7 +200,7 @@
                         <div class="tile-subtitle">bruce.banner</div>
                       </div>
                       <div class="tile-action">
-                        <button class="btn btn-link btn-action btn-lg"><i class="icon icon-edit"></i></button>
+                        <button class="link link-primary btn-action btn-lg"><i class="icon icon-edit"></i></button>
                       </div>
                     </div>
                     <div class="tile tile-centered">
@@ -207,7 +209,7 @@
                         <div class="tile-subtitle">Dayton, Ohio</div>
                       </div>
                       <div class="tile-action">
-                        <button class="btn btn-link btn-action btn-lg"><i class="icon icon-edit"></i></button>
+                        <button class="link link-primary btn-action btn-lg"><i class="icon icon-edit"></i></button>
                       </div>
                     </div>
                   </div>
