--- a/docs/components/tiles.html
+++ b/docs/components/tiles.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="docs-container off-canvas off-canvas-sidebar-show">
-      <div class="docs-navbar"><a class="off-canvas-toggle btn btn-link btn-action" href="#sidebar"><i class="icon icon-bars"></i></a>
+      <div class="docs-navbar"><a class="off-canvas-toggle link link-primary btn-action" href="#sidebar"><i class="icon icon-bars"></i></a>
         <div class="btns d-flex"><a class="btn btn-primary ml-1" href="https://github.com/Burkson/ridestyler.ui" target="_blank">GitHub</a></div>
       </div>
       <div class="docs-sidebar off-canvas-sidebar" id="sidebar">
@@ -51,6 +51,8 @@
               <div class="accordion-body">
                 <ul class="menu menu-nav">
                   <li class="menu-item"><a href="../elements/typography.html">Typography</a>
+                  </li>
+                  <li class="menu-item"><a href="../elements/links.html">Links</a>
                   </li>
                   <li class="menu-item"><a href="../elements/headers.html">Headers</a>
                   </li>
@@ -228,13 +230,13 @@
               <div class="column col-6 col-md-9 col-xs-12">
                 <div class="tile tile-centered">
                   <div class="tile-icon">
-                    <div class="example-tile-icon"><i class="icon icon-mail centered"></i></div>
+                    <div class="example-tile-icon"><i class="icon icon-file-pdf centered"></i></div>
                   </div>
                   <div class="tile-content">
                     <div class="tile-title">ridestyler.ui-docs.pdf</div><small class="tile-subtitle text-gray">14MB · Public · 1 Jan, 2017</small>
                   </div>
                   <div class="tile-action">
-                    <button class="btn btn-link btn-action"><i class="icon icon-more-vert"></i></button>
+                    <button class="link link-primary btn-action"><i class="icon icon-ellipsis-v"></i></button>
                   </div>
                 </div>
               </div>
@@ -250,8 +252,8 @@
     <span class="hljs-tag">&lt;<span class="hljs-name">small</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"tile-subtitle text-gray"</span>&gt;</span>14MB · Public · 1 Jan, 2017<span class="hljs-tag">&lt;/<span class="hljs-name">small</span>&gt;</span>
   <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
   <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"tile-action"</span>&gt;</span>
-    <span class="hljs-tag">&lt;<span class="hljs-name">button</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"btn btn-link"</span>&gt;</span>
-      <span class="hljs-tag">&lt;<span class="hljs-name">i</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"icon icon-more-vert"</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">i</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">button</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"link link-primary"</span>&gt;</span>
+      <span class="hljs-tag">&lt;<span class="hljs-name">i</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"icon icon-ellipsis-v"</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">i</span>&gt;</span>
     <span class="hljs-tag">&lt;/<span class="hljs-name">button</span>&gt;</span>
   <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
 <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
