--- a/docs/src/elements/headers.pug
+++ b/docs/src/elements/headers.pug
@@ -20,7 +20,7 @@ block docs-content
           section.navbar-section
             h1 Augmented Reality
           section.navbar-section
-            button.btn.btn-link
+            button.link
               | Wheel Co. 
               i.icon.icon-caret-down
         header
@@ -46,7 +46,7 @@ block docs-content
           section.navbar-section
             h1 Augmented Reality
           section.navbar-section
-            button.btn.btn-link
+            button.link
               | Wheel Co. 
               i.icon.icon-caret-down
         header.compact.text-center.bg-ridestyler-gray Download our new app!
