--- a/docs/src/layout/navbar.pug
+++ b/docs/src/layout/navbar.pug
@@ -8,7 +8,7 @@ block variables
 
 mixin user-menu-example
   span.dropdown.dropdown-right
-    button.btn.btn-link.dropdown-toggle
+    button.link.dropdown-toggle
       | Wheel Co. 
       i.icon.icon-caret-down
     ul.menu
@@ -61,7 +61,7 @@ block docs-content
             </section>
             <section class="navbar-section">
               <span class="dropdown dropdown-right">
-                <button class="btn btn-link dropdown-toggle">Wheel Co. <i class="icon icon-caret-down"></i></button>
+                <button class="link dropdown-toggle">Wheel Co. <i class="icon icon-caret-down"></i></button>
                 <ul class="menu">
                   ...
                 </ul>
@@ -101,7 +101,7 @@ block docs-content
             </section>
             <section class="navbar-section">
               <span class="dropdown dropdown-right">
-                <button class="btn btn-link dropdown-toggle">Wheel Co. <i class="icon icon-caret-down"></i></button>
+                <button class="link dropdown-toggle">Wheel Co. <i class="icon icon-caret-down"></i></button>
                 <ul class="menu">
                   ...
                 </ul>
@@ -118,28 +118,28 @@ block docs-content
       .column.col-12
         .navbar
           .navbar-section
-            a.btn.btn-link(href="#navbar") Docs
-            a.btn.btn-link(href="#navbar") Examples
+            a(href="#navbar") Docs
+            a(href="#navbar") Examples
           .navbar-center
             .ridestyler-logo-full.light
           .navbar-section
-            a.btn.btn-link(href="https://twitter.com/") Twitter
-            a.btn.btn-link(href="https://github.com/Burkson/ridestyler.ui") GitHub
+            a(href="https://twitter.com/") Twitter
+            a(href="https://github.com/Burkson/ridestyler.ui") GitHub
 
     pre.code(data-lang='HTML')
       code
         :highlight(lang="html")
           <header class="navbar">
             <section class="navbar-section">
-              <a href="#" class="btn btn-link">Docs</a>
-              <a href="#" class="btn btn-link">Examples</a>
+              <a href="#">Docs</a>
+              <a href="#">Examples</a>
             </section>
             <section class="navbar-center">
               <!-- centered logo or brand -->
             </section>
             <section class="navbar-section">
-              <a href="#" class="btn btn-link">Twitter</a>
-              <a href="#" class="btn btn-link">GitHub</a>
+              <a href="#">Twitter</a>
+              <a href="#">GitHub</a>
             </section>
           </header>
 
