--- a/src/_tabs.scss
+++ b/src/_tabs.scss
@@ -19,13 +19,13 @@
       text-decoration: none;
       &:focus,
       &:hover {
-        color: $link-color;
+        color: $primary-color;
       }
     }
     &.active a,
     a.active {
       border-bottom-color: $primary-color;
-      color: $link-color;
+      color: $primary-color;
     }
 
     &.tab-action {
