--- a/docs/src/elements/tables.pug
+++ b/docs/src/elements/tables.pug
@@ -216,5 +216,62 @@ block docs-content
               </tr>
             </tbody>
           </table>
+    
+    +docs-subheading('tables-fixed-headers', 'Fixed Headers')
 
+    .docs-demo.columns
+      .column.col-12.table-sticky-headers
+        table.table.table-striped-even.table-hover
+          thead
+            tr
+              th #
+              th Language
+              th People Using
+          tbody
+            tr 
+              td 1
+              td JavaScript
+              td 1 Billion
+            tr 
+              td 2
+              td C#
+              td 500 Million
+            - for (var i=3; i < 30; i++) {
+              tr
+                td= i
+                td PHP
+                td 1
+            - }
+            tr 
+              td= i
+              td Fortran
+              td -100
+
+    p
+      | Wrap your table with a #[code table-sticky-headers] element to have sticky table headers. Adjust the #[code max-height] as needed. 
+      | The #[code th] cells in your table's #[code thead] will become fixed when the table's #[code height] becomes bigger then it's #[code max-height].
+      | Browsers without #[code position: sticky] support will fallback to non-scrolling tables.
+
+    pre.code(data-lang='HTML')
+      code
+        :highlight(lang="html")
+          <div class="table-sticky-headers">
+            <table class="table table-striped table-hover">
+              <thead>
+                <tr>
+                  <th>name</th>
+                  <th>genre</th>
+                  <th>release date</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr class="active">
+                  <td>The Shawshank Redemption</td>
+                  <td>Crime, Drama</td>
+                  <td>14 October 1994</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+  
   include ../_layout/_footer.pug
