--- a/docs/src/elements/tables.pug
+++ b/docs/src/elements/tables.pug
@@ -217,45 +217,56 @@ block docs-content
             </tbody>
           </table>
     
-    +docs-subheading('tables-fixed-headers', 'Fixed Headers')
+    +docs-subheading('tables-responsive', 'Responsive tables')
 
     .docs-demo.columns
-      .column.col-12.table-sticky-headers
+      .column.col-12.table-responsive
         table.table.table-striped-even.table-hover
+          - var extraColumnCount=20;
           thead
             tr
               th #
               th Language
               th People Using
+              - for (let j=0; j < extraColumnCount; j++)
+                th="Col "+j
           tbody
             tr 
               td 1
               td JavaScript
               td 1 Billion
+              - for (let j=0; j < extraColumnCount; j++)
+                td=j
             tr 
               td 2
               td C#
               td 500 Million
+              - for (let j=0; j < extraColumnCount; j++)
+                td=j
             - for (var i=3; i < 30; i++) {
               tr
                 td= i
                 td PHP
                 td 1
+                - for (let j=0; j < extraColumnCount; j++)
+                  td=j
             - }
             tr 
               td= i
               td Fortran
               td -100
+              - for (let j=0; j < extraColumnCount; j++)
+                td=j
 
     p
-      | Wrap your table with a #[code table-sticky-headers] element to have sticky table headers. Adjust the #[code max-height] as needed. 
-      | The #[code th] cells in your table's #[code thead] will become fixed when the table's #[code height] becomes bigger then it's #[code max-height].
-      | Browsers without #[code position: sticky] support will fallback to non-scrolling tables.
+      | Wrap your table with a #[code table-responsive] element to make it respond by scrolling vertically and horizontally. The table will automatically get a #[code max-height], 
+      | adjust it #[code max-height] as needed. The #[code th] cells in your table's #[code thead] will become fixed when the table's #[code height] becomes bigger then it's #[code max-height].
+      | Browsers without #[code position: sticky] support will fallback to no sticky-headers. While printing #[code overflow] and #[code max-height] will be reset.
 
     pre.code(data-lang='HTML')
       code
         :highlight(lang="html")
-          <div class="table-sticky-headers">
+          <div class="table-responsive">
             <table class="table table-striped table-hover">
               <thead>
                 <tr>
