Makes the container padding smaller at `xs` breakpoint

--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -380,6 +380,10 @@
   }
 }
 @media (max-width: $size-xs) {
+  .container {
+    padding: $layout-spacing $layout-spacing;
+  }
+
   .col-xs-12,
   .col-xs-11,
   .col-xs-10,
