Adjusts off-canvas-content to not affect page size

--- a/src/_off-canvas.scss
+++ b/src/_off-canvas.scss
@@ -49,6 +49,7 @@ $off-canvas-breakpoint: $size-lg !default;
 		flex: 1 1 auto;
 		height: 100%;
 		padding: $layout-spacing $layout-spacing $layout-spacing 4rem;
+		overflow: auto;
 	}
 
 	.off-canvas-overlay {
