--- a/src/_brand.scss
+++ b/src/_brand.scss
@@ -1,5 +1,8 @@
 .ridestyler-logo-text {
+    width: 375px;
+    height: 82px;
     background-image: url($ridestyler-logo-text);
+    background-size: 100% 100%;
 }
 .ridestyler-logo-icon {
     width: 45px;
@@ -21,6 +24,9 @@
 }
 .ridestyler-logo-tagonly {
     background-image: url($ridestyler-logo-tagonly-black);
+    width: 100px;
+    height: 100px;
+    background-size: 100% 100%;
 
     &.light {
         background-image: url($ridestyler-logo-tagonly-white);
