--- a/docs/src/_layout/_docs-layout.pug
+++ b/docs/src/_layout/_docs-layout.pug
@@ -43,7 +43,8 @@ block content
             {url: 'icons', name: 'Icons'},
             {url: 'labels', name: 'Labels'},
             {url: 'code', name: 'Code'},
-            {url: 'media', name: 'Media'}
+            {url: 'media', name: 'Media'},
+            {url: 'brand', name: 'Brand'}
           )
           +docs-accordion(
             'layout',
